Shifted reading pdf as text to json

--- a/optimized_resume.tex
+++ b/optimized_resume.tex
@@ -8,61 +8,44 @@
 \begin{document}
 \begin{rSection}{OBJECTIVE}
 
-{AI Engineer with experience in developing and deploying machine learning and generative AI solutions, including LLMs, using Python, PyTorch/TensorFlow, and cloud platforms like AWS. Proven ability to improve model performance in production and integrate AI into workflows. Seeking to leverage expertise in a fast-paced insurtech startup environment.}
+{AI Engineer with experience in developing and deploying machine learning and generative AI solutions. Proficient in Python, PyTorch/TensorFlow, and cloud platforms (AWS). Proven ability to fine-tune LLMs, build scalable APIs, and manage MLOps pipelines. Seeking to leverage expertise in AI to contribute to the development of innovative solutions in the insurance or fintech industry.}
 
 \end{rSection}
 \begin{rSection}{Education}
 
-{\bf Master of Science in Computer Science}, University of Texas at Dallas \hfill {Aug ‘2022 – Dec ‘2023}
-Relevant Coursework: GPA 3.61. Courses: Statistical Methods for Data Science, Machine Learning, Computer Vision, Big Data Analytics, Design and Analysis of Algorithms, Web Programming Languages, Database Design.
+{\bf Master of Science in Computer Science}, University of Texas at Dallas \hfill {Aug '2022 - Dec '2023}
 
-{\bf Bachelor of Technology in Information Technology}, Indian Institute of Information Technology Allahabad \hfill {Jul ‘2018 - May ‘2022}
-Relevant Coursework: Courses: Data Structures and Algorithms, Operating Systems, Automata Theory, Database Management, Machine Learning, Computer Networks, Data Mining, Graph Theory, Object Oriented Programming, Wireless Network Security
+{\bf Bachelor of Technology in Information Technology}, Indian Institute of Information Technology Allahabad \hfill {Jul 2018 - May '2022}
 
 \end{rSection}
 \begin{rSection}{SKILLS}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Technical Skills & Python, PyTorch, TensorFlow, AWS (S3, EC2, RDS, Lambda, Textract, OpenSearch Service, SageMaker, Bedrock), LangChain, GPT-4 API, MLflow, Kubeflow, C/C++, Java, JavaScript, R, Shell Scripting, MySQL, PostgreSQL, MongoDB, Oracle DB, HTML, CSS, React, NextJS, PHP, Typescript, Flask, Pandas, Numpy, Yolov5, Keras, Scikit-learn, LMStudio, Ollama, Prompt Engineering, RAG, Docker, Git, Power BI, MATLAB, Excel, Apache Spark, Hadoop, Kafka \\
+Technical Skills & Python, PyTorch, TensorFlow, AWS (S3, EC2, RDS, Lambda, Textract, OpenSearch Service, SageMaker, Bedrock), LangChain, Prompt Engineering, API Development, Microservices, MLOps, Docker, Git, NLP, RAG, C/C++, Java, JavaScript, R, Shell Scripting, MySQL, PostgreSQL, MongoDB, Oracle DB, HTML, CSS, React, NextJS, PHP, Typescript, Flask, Pandas, Numpy, Yolov5, Keras, SciPy, Scikit-learn, LMStudio, Ollama \\
 \end{tabular}\\
 \end{rSection}
 \begin{rSection}{EXPERIENCE}
 
-\textbf{Software Development Engineer – RAG, NLP, LangChain} \hfill Jan ‘2024 – Present\\
+\textbf{Software Development Engineer} \hfill Jan '2024 - Present\\
 Applab Systems \hfill \textit{Dallas, TX}
 \begin{itemize}
     \itemsep -3pt {} 
-     \item Improved information retrieval accuracy by 70\textbackslash{}% compared to keyword search by implementing semantic search capabilities using Amazon OpenSearch Service with the k-NN index.
-     \item Built a highly accurate (95\textbackslash{}%+) document OCR pipeline utilizing Amazon Textract for extracting text and structural data from complex engineering diagrams and schematics stored in S3.
-     \item Optimized retrieval precision by 40\textbackslash{}% through advanced text chunking algorithms executed in AWS Lambda and generating vector embeddings via OpenAI Embeddings API.
-     \item Integrated GPT-4 with Vision via API calls from AWS compute services to analyze and interpret engineering drawings, enhancing multimodal RAG capabilities and boosting usability by 60\textbackslash{}%.
-     \item Leveraged the GPT-4 API from AWS services for generating accurate, context-aware answers based on technical document chunks retrieved from Amazon OpenSearch Service.
+     \item Improved information retrieval accuracy by 70\textbackslash{}% compared to keyword search by implementing semantic search capabilities using Amazon OpenSearch Service with the k-NN index, enhancing AI-driven solutions.
+     \item Built a highly accurate (95\textbackslash{}%+) document OCR pipeline utilizing Amazon Textract for extracting text and structural data from complex engineering diagrams and schematics stored in S3, streamlining data processing for AI models.
+     \item Optimized retrieval precision by 40\textbackslash{}% through advanced text chunking algorithms executed in AWS Lambda and generating vector embeddings via OpenAI Embeddings API, improving the efficiency of LLMs.
+     \item Integrated GPT-4 with Vision via API calls from AWS compute services to analyze and interpret engineering drawings, enhancing multimodal RAG capabilities and boosting usability by 60\textbackslash{}%, demonstrating expertise in deploying AI models.
+     \item Leveraged the GPT-4 API from AWS services for generating accurate, context-aware answers based on technical document chunks retrieved from Amazon OpenSearch Service, showcasing experience in building AI-powered applications.
 \end{itemize}
 
-\textbf{Machine Leaning Engineer – Pytorch, YOLOv5, Python} \hfill Dec ‘2021 – Jul ‘2022\\
+\textbf{Machine Leaning Engineer} \hfill Dec '2021 - Jul '2022\\
 Coral Innovations Pvt. Ltd \hfill \textit{Hyderabad, India}
 \begin{itemize}
     \itemsep -3pt {} 
-     \item Engineered a Meter Board Reader application using YOLOv5, automating meter reading with 78\textbackslash{}% accuracy.
-     \item Improved dataset preprocessing, enhancing pipeline efficiency by 30\textbackslash{}% through optimized feature extraction.
+     \item Engineered a Meter Board Reader application using YOLOv5, automating meter reading with 78\textbackslash{}% accuracy, demonstrating experience in developing and deploying ML solutions.
+     \item Improved dataset preprocessing, enhancing pipeline efficiency by 30\textbackslash{}% through optimized feature extraction, contributing to model performance.
      \item Implemented data augmentation techniques, increasing model robustness and generalization.
      \item Fine-tuned object detection models, achieving higher accuracy with optimized hyperparameters.
 \end{itemize}
 
-\end{rSection}
-\begin{rSection}{PROJECTS}
-\vspace{-1.25em}
-\item \textbf{Mini Unix Kernel Simulation – C, Inodes, File-handling, Page tables}
-    Built a simplified Unix-like kernel supporting process creation, scheduling, and system calls (e.g., fork(), exec(), wait()). Implemented a basic file system layer with support for block-level access, inodes, and file metadata management. Designed an interrupt handling mechanism and incorporated basic virtual memory management with page tables and swapping.
-\item \textbf{Scalable Search Engine Using Elasticsearch – Elasticsearch, Python, Kibana}
-    Indexed large datasets (e.g., Wikipedia dump) and exposed a REST API for fast, ranked queries. Tuned shard allocation, replication, and indexing strategies to improve query throughput and fault tolerance. Integrated Kibana dashboards to visualize usage stats and search heatmaps.
-\item \textbf{Predicting Safety Probabilities by Location and Day in Dallas – Pandas, Streamlit, sklearn, Llama-2}
-    Created a Streamlit dashboard to analyze crime severity using Random Forest classification. Integrated Llama-2 NLP model for text-based severity analysis.
-\end{rSection}
-\begin{rSection}{Extra-Curricular Activities}
-\begin{itemize}
-    \item Demonstrated problem-solving and technical skills through active participation in hackathons and data science competitions.
-    \item Managed social media engagement and event coordination for a university dance crew, increasing audience interaction.
-\end{itemize}
 \end{rSection}
 \end{document}
