--- a/latex_resume_format/resume_faangpath.tex
+++ b/latex_resume_format/resume_faangpath.tex
@@ -1,29 +1,20 @@
 \documentclass{resume} % Use the custom resume.cls style
 
 \usepackage[left=0.4in,top=0.4in,right=0.4 in,bottom=0.4in]{geometry} % Document margins
+
+\usepackage{tabularx}
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Muppidi Rahul Reddy} % Your name
 % You can merge both of these into a single line, if you do not have a website.
-\address{+1(940) 745-9717 \\ Dallas,TX
-\\ \href{mailto:rahulreddy2036@gmail.com}{rahulreddy2036@gmail.com} \\ \href{https://www.linkedin.com/in/muppidi-rahul-reddy/}{LinkedIn}
-\\ \href{https://www.github.com/RahulReddy20}{Github} 
+\address{+1(940) 745-9717 \\ Sunnyvale, CA, 94085
+\\ \href{mailto:rahulreddy3620@gmail.com}{rahulreddy3620@gmail.com} \\ \href{https://www.linkedin.com/in/muppidi-rahul-reddy/}{linkedin.com/in/muppidi-rahul-reddy/}}
+\\ \href{https://www.github.com/RahulReddy20}{github.com/RahulReddy20}
 \\ \href{https://www.rahul-reddy.vercel.app}{rahul-reddy.vercel.app}}
 
 % \href{www.faangpath.com}{www.faangpath.com} %
 
 \begin{document}
-
-%----------------------------------------------------------------------------------------
-%	OBJECTIVE
-%----------------------------------------------------------------------------------------
-
-% \begin{rSection}{OBJECTIVE}
-
-% {Software Engineer with an eagerness to explore different things, seeking full-time Software Developer or Data Analyst roles.}
-
-
-% \end{rSection}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
@@ -49,14 +40,16 @@ Indian Institute Of Information Technology, Allahabad   \\
 %----------------------------------------------------------------------------------------
 \begin{rSection}{SKILLS}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Technical Skills & C, C++, Python, MySQL, MongoDB, Git
-\\
-Machine Learning & Panda, Numpy, Yolov5, Tensorflow, Keras\\
-Software Development & HTML, CSS, Javascript, Bootstrap, ReactJS\\
-AWS & S3, EC2, VPC, ECS, Lambda, Cloudwatch\\
-Certfications & IBM Data Scientist Professional Certificate\\
-\end{tabular}\\
+\noindent % Ensure table aligns with text block margin
+\begin{tabularx}{\textwidth}{ @{} >{\bfseries}l @{\hspace{3ex}} X } % Table spans \textwidth, X column wraps
+Programming Languages & Python, Java, JavaScript, C/C++, R, Shell Scripting \\
+Databases & MySQL, PostgreSQL, MongoDB, Oracle DB \\
+Cloud \& Big Data & AWS (S3, EC2, RDS, Lambda, Textract, OpenSearch Service, SageMaker, Bedrock), Apache Spark, Hadoop, Kafka \\
+Web Development & HTML, CSS, React, NextJS, PHP, Typescript, Flask \\
+Machine Learning & PyTorch, TensorFlow, Pandas, NumPy, Scikit-learn, SciPy, YOLOv5, Keras \\
+Generative AI & LLMs, LangChain, LMStudio, Ollama, Prompt Engineering, RAG \\
+Other Tools \& Technologies & Docker, Git, Power BI, MATLAB, Excel, MLflow \\
+\end{tabularx}
 \end{rSection}
 
 \begin{rSection}{EXPERIENCE}
@@ -69,15 +62,7 @@ Coral Innovations Pvt. Ltd  \hfill {Hyderabad, India}
      \item Introduced tools to clean and group the dataset using python and Yolov5 which in turn enhances the efficiency and save time of other employees by \textbf{30\%}.
     \item Built a Yolo v5 model on images from end to end and trained it to suit the requirement. And was successful in getting predictions of nearly\textbf{ 78\%}.  
  \end{itemize}
- 
-% \textbf{Role Name} \hfill Jan 2017 - Jan 2019\\
-% Company Name \hfill \textit{San Francisco, CA}
-%  \begin{itemize}
-%     \itemsep -3pt {} 
-%      \item Achieved X\% growth for XYZ using A, B, and C skills.
-%      \item Led XYZ which led to X\% of improvement in ABC
-%     \item Developed XYZ that did A, B, and C using X, Y, and Z. 
-%  \end{itemize}
+
 
 \end{rSection} 
 
@@ -112,7 +97,7 @@ Coral Innovations Pvt. Ltd  \hfill {Hyderabad, India}
 \end{rSection} 
 
 %----------------------------------------------------------------------------------------
-\begin{rSection}{Extra-Curricular Activities} 
+\begin{rSection}{Personal Accomplishments} 
 \vspace{0em}
 \begin{itemize}
     \itemsep -6pt {} 
@@ -122,20 +107,11 @@ Coral Innovations Pvt. Ltd  \hfill {Hyderabad, India}
      \item Notable achievements include leading a team to a top-three finish at PRAGMA, where the team developed a customer churn prediction model.
      \item Excelled in a HackAI hackathon challenge by creating a real-time image recognition system.
  \end{itemize}
-% \item 	Actively write \href{https://www.faangpath.com/blog/}{blog posts} and social media posts (\href{https://www.tiktok.com/@faangpath}{TikTok}, \href{https://www.instagram.com/faangpath/?hl=en}{Instagram}) viewed by over 20K+ job seekers per week to help people with best practices to land their dream jobs. 
-% \item	Sample bullet point.
 
 
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-% \begin{rSection}{Leadership} 
-% \begin{itemize}
-%     \item Admin for the \href{https://discord.com/invite/WWbjEaZ}{FAANGPath Discord community} with over 6000+ job seekers and industry mentors. Actively involved in facilitating online events, career conversations, and more alongside other admins and a team of volunteer moderators! 
-% \end{itemize}
-
-
-% \end{rSection}
 
 
 \end{document}
